--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <!-- Favicon-->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- Custom Css -->
-    <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/authentication.css">
-    <link rel="stylesheet" href="assets/css/color_skins.css">
+    <link rel="stylesheet" href="public/assets/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="public/assets/css/main.css">
+    <link rel="stylesheet" href="public/assets/css/authentication.css">
+    <link rel="stylesheet" href="public/assets/css/color_skins.css">
 </head>
 
 <body class="theme-cyan authentication sidebar-collapse">
@@ -27,9 +27,9 @@
 
 
 <!-- Jquery Core Js -->
-<script src="assets/bundles/libscripts.bundle.js"></script>
-<script src="assets/bundles/vendorscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js -->
-<script src="main.js"></script>
+<script src="public/assets/bundles/libscripts.bundle.js"></script>
+<script src="public/assets/bundles/vendorscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js -->
+<script src="public/main.js"></script>
 <script>
 //=============================================================================
 $('.form-control').on("focus", function() {
