--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="public/assets/css/main.css">
     <link rel="stylesheet" href="public/assets/css/authentication.css">
     <link rel="stylesheet" href="public/assets/css/color_skins.css">
+    <link rel="stylesheet" type="text/css" href="public/main.min.css">
 </head>
 
 <body class="theme-cyan authentication sidebar-collapse">
